--- a/TwsPluginHost/src/main/res/values-zh-rCN/strings.xml
+++ b/TwsPluginHost/src/main/res/values-zh-rCN/strings.xml
@@ -13,7 +13,7 @@
     <string name="hotseat_home_title">首页</string>
     <string name="use_terms_privacy_statement">软件许可及服务协议</string>
     <string name="debug_plugin_framework">插件调试入口</string>
-    <string name="account_logout">退出当前帐号</string>
+    <string name="account_logout">退出</string>
     <string name="activity_settings_title">设置</string>
     <string name="activity_message_mgr_title">信息管理</string>
 
