--- a/TwsPluginShareLib/src/main/res/values/strings.xml
+++ b/TwsPluginShareLib/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TPF</string>
+    <string name="app_name">TPF框架</string>
 
     <!--share res-->
     <string name="share_string_1">这是宿主程序共享库资源1</string>
